re-coding footer && fix footer wrap on iphone

--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,23 +1,30 @@
 @import '~variables.scss';
 
-mat-toolbar {
+footer {
     background: $color-background-footer;
     color: $color-footer;
-    mat-toolbar-row {
-        width: unset;
+    padding: 16px;
+    .nav {
+        a {
+            color: inherit;
+            text-decoration: none;
+            padding: 0;
+            margin: 0px 8px 0px 8px;
+        }
     }
-}
-.nav {
-    a {
-        color: inherit;
-        text-decoration: none;
-        padding: 0;
+    .policy {
+        p {
+            text-align: right;
+            font-size: 14px;
+            margin: 0;
+            padding: 0;
+            white-space: normal;
+        }
     }
-}
-.policy {
-    p {
-        font-size: 14px;
-        margin: 0;
-        padding: 0;
+    .policy-xs {
+        padding-top: $unit-desktop-space-between-content-areas;
+        p {
+            text-align: center;
+        }
     }
 }
